# OpenWS

./: .editorconfig  .gitignore  CMakeLists.txt  ChangeLog.txt  LICENSE  Makefile  README.md  forward.md  implementedGLFWFunctions  issue_template.md  outlook.md  todo
include/: openWS.h
src/: checkInitAndFindWindow.h  wsClock.h  wsCoord.h  wsError.cpp  wsFramebuffer.cpp  wsGLFWCallbacks.cpp  wsGLFWWindow.cpp  wsGet.cpp  wsGlobalVariables.cpp  wsInit.cpp  wsList.h  wsMain.cpp  wsSet.cpp  wsSetCallback.cpp  wsWindow.cpp  wsWindow.h  wsWindowControlFunctions.cpp  wsWindowDisplay.cpp  wsWindowManager.h  wsWindowReceivers.cpp
src/Sample/: 2048.cpp  Example.cpp  Sub-Subwindow.cpp  VariousBuffers.cpp  Windows.cpp  decoration.cpp  hint.cpp  windowMessage.cpp
